--- a/tcc.tex
+++ b/tcc.tex
@@ -1,7 +1,5 @@
 \documentclass{iiufrgs}
 \usepackage[latin1]{inputenc}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
 \usepackage{graphicx}
 \usepackage[section]{placeins}
 \usepackage{setspace}
@@ -17,6 +15,8 @@
 \usepackage{subfigure}
 \usepackage{lscape}
 \usepackage{enumitem}
+\usepackage[toc,page]{appendix}
+
 \onehalfspacing
 
 \hyphenation{cmdStart}
@@ -219,10 +219,9 @@ The development of the solution will be done by the unification of the technolog
 \include{conteudo/capitulo4}
 \include{conteudo/capitulo5}
 \include{conteudo/capitulo6}
+\include{conteudo/capitulo7}
 
 \bibliography{tcc}
 \bibliographystyle{abnt}
-
-\include{conteudo/capitulo7}
 
 \end{document}
