--- a/conteudo/capitulo5.tex
+++ b/conteudo/capitulo5.tex
@@ -1,4 +1,4 @@
-\chapter{Seguran\c{c}a}\label{seguranca}
+\chapter{Segurança}\label{seguranca}
 
 O Portal de algoritmos atual apresenta algumas falhas de segurança, abaixo são citadas apenas algumas como sendo graves. Além das falhas citadas é proposto uma solução utilizando \ac{HTTPS}.
 
