--- a/conteudo/capitulo7.tex
+++ b/conteudo/capitulo7.tex
@@ -1,6 +1,4 @@
-\appendix
-
-\chapter{Documentação}\label{Documentacao}
+\chapter*{Apêndice A - Documentação}\label{Documentacao}
 
 
 Incluir Documentação nesse apêndice
