--- a/conteudo/capitulo3.tex
+++ b/conteudo/capitulo3.tex
@@ -220,3 +220,4 @@ Os problemas encontrados no \textit{software} atual prejudicam a usabilidade do 
 
 Para solucionar e deixá-lo mais usável, fazendo com que mais alunos sejam beneficiados pelo portal, bem como facilitando o uso por parte dos professores,  no próximo capítulo será descrita toda a modelagem, novas interfaces e novas funcionalidades, utilizando-se de tecnologias mais atuais.
 
+Foram apresentados nesse capítuloos problemas atuais do serviço do portal de algoritmos. No próximo capítulo serão apresentados alternativas de soluções para estes problemas.
