--- a/conteudo/capitulo4.tex
+++ b/conteudo/capitulo4.tex
@@ -1162,8 +1162,6 @@ Nesta seção foram apresentados todos os protótipos de interfaces gráficas, a seg
 
 Diagramas de Robustez tem por objetivo demonstrar a ligação dos casos de uso com as interfaces gráficas e classes de domínio dentro do contexto da modelagem do \textit{software}.
 
-\newpage
-
 \subsection{Cadastro de Aluno}
 
 A Figura \ref{rbRegistroAluno} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkCadastroAluno}.
@@ -1178,6 +1176,8 @@ A Figura \ref{rbRegistroAluno} demonstra as associações das classes de domínio n
 \end{figure}
 \FloatBarrier
 
+\newpage
+
 \subsection{Autenticação}
 
 A Figura \ref{rbAutenticacao} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkAutenticacao}.
@@ -1188,36 +1188,6 @@ A Figura \ref{rbAutenticacao} demonstra as associações das classes de domínio na
 	\caption{Diagrama de Robustez de Autenticação}
 	\includegraphics[width=15cm]{UML/robustez/2.png}
 	\label{rbAutenticacao}
-	Fonte: (AUTOR, 2018)
-\end{figure}
-\FloatBarrier
-
-\newpage
-
-\subsection{Recuperação de Senha}
-
-A Figura \ref{rbRecuperacaoSenha} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkRecuperacaoSenha}.
-
-\FloatBarrier
-\begin{figure}[!htb]
-	\centering
-	\caption{Diagrama de Robustez de Recuperação de Senha}
-	\includegraphics[width=15cm]{UML/robustez/3.png}
-	\label{rbRecuperacaoSenha}
-	Fonte: (AUTOR, 2018)
-\end{figure}
-\FloatBarrier
-
-\subsection{Boas Vindas do Aluno}
-
-A Figura \ref{rbBoasVindasAluno} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkBoasVindasAlunos}.
-
-\FloatBarrier
-\begin{figure}[!htb]
-	\centering
-	\caption{Diagrama de Robustez de Boas Vindas do Aluno}
-	\includegraphics[width=15cm]{UML/robustez/4.png}
-	\label{rbBoasVindasAluno}
 	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
@@ -1386,20 +1356,6 @@ A Figura \ref{rbListaProblema} demonstra as associações das classes de domínio n
 \end{figure}
 \FloatBarrier
 
-\subsection{Visualização de Solução partindo da listagem de Grupos}
-
-A Figura \ref{rbVisualizacaoSolucao3} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkVisualizacaoSolucao2}.
-
-\FloatBarrier
-\begin{figure}[!htb]
-	\centering
-	\caption{Diagrama de Robustez de Visualização de Solução partindo da listagem de Grupos}
-	\includegraphics[width=15cm]{UML/robustez/16.png}
-	\label{rbVisualizacaoSolucao3}
-	Fonte: (AUTOR, 2018)
-\end{figure}
-\FloatBarrier
-
 \newpage
 
 \subsection{Lista de Alunos}
@@ -1428,20 +1384,6 @@ A Figura \ref{rbCadastroAlunoAdministrador} demonstra as associações das classes
 	\caption{Diagrama de Robustez de Cadastro de Alunos pelo Administrador}
 	\includegraphics[width=15cm]{UML/robustez/18.png}
 	\label{rbCadastroAlunoAdministrador}
-	Fonte: (AUTOR, 2018)
-\end{figure}
-\FloatBarrier
-
-\subsection{Visualização de Solução partindo da listagem de Alunos}
-
-A Figura \ref{rbVisualizacaoSolucao4} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkVisualizacaoSolucao3}.
-
-\FloatBarrier
-\begin{figure}[!htb]
-	\centering
-	\caption{Diagrama de Robustez de Visualização de Solução partindo da listagem de Alunos}
-	\includegraphics[width=15cm]{UML/robustez/19.png}
-	\label{rbVisualizacaoSolucao4}
 	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
@@ -1478,20 +1420,6 @@ A Figura \ref{rbCadastroListaProblemas} demonstra as associações das classes de 
 \end{figure}
 \FloatBarrier
 
-\subsection{Visualização de Solução partindo da listagem de Listas de Problemas}
-
-A Figura \ref{rbVisualizacaoSolucao5} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkVisualizacaoSolucao4}.
-
-\FloatBarrier
-\begin{figure}[!htb]
-	\centering
-	\caption{Diagrama de Robustez de Visualização de Solução partindo da listagem de Listas de Problemas}
-	\includegraphics[width=15cm]{UML/robustez/22.png}
-	\label{rbVisualizacaoSolucao5}
-	Fonte: (AUTOR, 2018)
-\end{figure}
-\FloatBarrier
-
 \newpage
 
 \subsection{Lista de Usuários}
@@ -1523,34 +1451,6 @@ A Figura \ref{rbCadastroUsuarios} demonstra as associações das classes de domíni
 \FloatBarrier
 
 \newpage
-
-\subsection{Lista de Administradores}
-
-A Figura \ref{rbListaAdministradores} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkListaAdministradores}.
-
-\FloatBarrier
-\begin{figure}[!htb]
-	\centering
-	\caption{Diagrama de Robustez de Lista de Administradores}
-	\includegraphics[width=15cm]{UML/robustez/25.png}
-	\label{rbListaAdministradores}
-	Fonte: (AUTOR, 2018)
-\end{figure}
-\FloatBarrier
-
-\subsection{Cadastro e Edição de Administradores}
-
-A Figura \ref{rbCadastroAdministradores} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkCadastroAdministradores}.
-
-\FloatBarrier
-\begin{figure}[!htb]
-	\centering
-	\caption{Diagrama de Robustez de Cadastro e Edição de Administradores}
-	\includegraphics[width=15cm]{UML/robustez/26.png}
-	\label{rbCadastroAdministradores}
-	Fonte: (AUTOR, 2018)
-\end{figure}
-\FloatBarrier
 
 \subsection{Lista de Professores}
 
@@ -1746,7 +1646,7 @@ A Figura \ref{sqCadastro} demonstra o fluxo de cadastro de um novo problema. O a
 \end{figure}
 \FloatBarrier
 
-Não foram construídos outrso diagramas de sequência, porque todos seriam muito semelhantes, trocando-se somente as classes envolvidas.
+Não foram construídos outros diagramas de sequência, porque todos seriam muito semelhantes, trocando-se somente as classes envolvidas.
 
 \newpage
 
@@ -1757,10 +1657,9 @@ Para o desenvolvimento da evolução do portal de algoritmos foi definido utilizar
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Arquitetura do Portal de Algoritmos}
-	\includegraphics[width=7cm]{imagens/arquitetura.png}
+	\caption{Arquitetura Lógica do Portal de Algoritmos}
+	\includegraphics[width=15cm]{imagens/arquitetura-logica.png}
 	\label{imgArquitetura}
-	\\
 	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
@@ -1770,3 +1669,17 @@ Na camada de \textit{Model} é feita a manipulação de dados, leitura, escrita de 
 Na camada de \textit{Controller} é responsável por receber todas as requisições do usuário, nessa camada possui métodos de ações.
 
 Na camada de \textit{View} temos a interação com o usuário, essa camada faz apenas a exibição dos dados.
+
+\newpage
+
+Além da arquitetura lógica, temos a arquiterura de sistema, que é apresentado na Figura \ref{imgArquiteturaSistema}.
+
+\FloatBarrier
+\begin{figure}[!htb]
+	\centering
+	\caption{Arquitetura do Software do Portal de Algoritmos}
+	\includegraphics[width=15cm]{imagens/arquitetura-software.png}
+	\label{imgArquiteturaSistema}
+	Fonte: (AUTOR, 2018)
+\end{figure}
+\FloatBarrier
