--- a/conteudo/capitulo6.tex
+++ b/conteudo/capitulo6.tex
@@ -1,5 +1,16 @@
 \chapter{Considerações Finais}\label{cpConsideracoesParciais}
 
+Problema e solução
+
+% usabilidade
+% tecnologia defassada
+
+% objetivos x o que foi feito
+% analise
+% proposta
+% desenvolvimento
+
+
 O novo \textit{software} foi desenvolvido utilizando tecnologias de ponta, como \textit{Java} na última versão estável, \textit{AngulaJS} na versão mais recente estável e um \textit{framework} de \ac{CSS} fácil de utilizar.
 
 Com a nova arquitetura do \textit{software} ficou mais fácil e rápido de implementar novas funcionalidades conforme as necessidades forem surgindo. A arquiteruta engloba uma \ac{API} \ac{REST} fácil de integrar e configurar.
