--- a/tcc.tex
+++ b/tcc.tex
@@ -36,6 +36,9 @@
 \setitemize{topsep=1em,parsep=0pt,partopsep=0pt,itemsep=0pt}
 \setenumerate{topsep=1em,parsep=0pt,partopsep=0pt,itemsep=0pt}
 
+% Desenvolvimento da Ferramenta de Gerenciamento do Portal de Algoritmos da UCS
+% Desenvolvimento de Ferramenta de Gerenciamento para o Portal de Algoritmos da UCS
+
 \course{\cgcc}
 \title{\\\large Evolução da Ferramenta de Gerenciamento do Portal de Algoritmos da UCS}
 \author{Margarin}{Adriano}
@@ -180,6 +183,7 @@ A todos vocês, minha sincera gratidão.
 \acro{WWW}[{\textit{WWW}}]{\textit{World Wide Web}}
 \acro{TCP}[{\textit{TCP}}]{\textit{Transmission Control Protocol}}
 \acro{CSS}[{\textit{CSS}}]{\textit{Cascading Style Sheets}}
+\acro{SSL}[{\textit{SSL}}]{\textit{Secure Socket Layer}}
 \end{acronym}
 
 \listoffigures
@@ -211,7 +215,6 @@ O desenvolvimento da solução contará com a unificação das tecnologias, seguindo 
 
 \bibliography{tcc}
 \bibliographystyle{abnt}
-
 
 \include{conteudo/capitulo7}
 
